Revision history for App-Doh

0.1.19    2013-08-23 12:00:33
          - Removed Ident and extra VERSION lines
          - Going to re use less on the CSS
          - Help model doesn't hard code the url
          - Switched to Dist::Zilla
          - Fixed Pod css for index
          - Going to rewrite float view
          - Own CSS starting to work
          - Started remove Bootstrap and lessc
          - Help model complete
          - Microformats register their extensions
          - Supports POD as second microformat
          - Daemon can start multiple instances
          - Added Daemon
          - Favicon, cfg files and Plack sorted
          - Rename to Doh complete
          - Navigation slider works
          - Removing original name
          - Serves static files
          - Serves pages via plack
          - Added project files to master branch
