@@ -4,9 +4,9 @@ name = App-Doh
 perl              = 5.010001
 namespace::sweep  = 0.006
 CGI::Simple       = 1.113
-Class::Usul       = v0.34.0
+Class::Usul       = v0.39.0
 Daemon::Control   = 0.000009
-File::DataClass   = v0.30.0
+File::DataClass   = v0.33.0
 HTML::Accessors   = v0.11.0
 Module::Pluggable = 4.8
 Moo               = 1.003
@@ -19,6 +19,7 @@ Text::Markdown    = 1.000031
 Twiggy            = 0.1021
 URI               = 1.60
 Web::Simple       = 0.020
+Unexpected        = v0.22.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
