@@ -2,7 +2,7 @@ package App::Doh;
 
 use 5.010001;
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 29 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 30 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants;
@@ -38,7 +38,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.1.$Rev: 29 $ of L<App::Doh>
+This documents version v0.1.$Rev: 30 $ of L<App::Doh>
 
 =head1 Description
 
@@ -85,7 +85,17 @@ Patches are welcome
 
 =head1 Acknowledgements
 
-Larry Wall - For the Perl programming language
+=over 3
+
+=item Larry Wall
+
+For the Perl programming language
+
+=item Justin Walsh
+
+For https://github.com/justinwalsh/daux.io from which L<App::Doh> was forked
+
+=back
 
 =head1 Author
 
