@@ -1,13 +1,5 @@
-<!-- Docs -->
-<div class="navbar navbar-fixed-top">
-   <div class="navbar-inner">
-      <a class="brand pull-left" href="[% page.homepage_url %]">
-         [% config.title %]</a>
-         <p class="navbar-text pull-right">
-            Generated by <a href="[% links.help_url %]">
-               [% config.appclass %]</a></p>
-   </div>
-</div>
+<!-- Documentation -->
+[% INCLUDE default/navbar.tt %]
 [% IF config.repo_url -%]
 <a href="[% config.repo_url %]" target="_blank"
    id="github-ribbon" class="github-ribbon">
