@@ -1,15 +1,5 @@
-<!-- Hompage -->
-<div class="navbar navbar-fixed-top">
-   <div class="navbar-inner">
-      <div class="container">
-         <a class="brand pull-left" href="[% page.homepage_url %]">
-            [% config.title %]</a>
-            <p class="navbar-text pull-right">
-               Generated by <a href="[% links.help_url %]">
-                  [% config.appclass %]</a></p>
-      </div>
-   </div>
-</div>
+<!-- Index -->
+[% INCLUDE default/navbar.tt %]
 <div class="homepage-hero well container-fluid">
    <div class="container">
 [% IF config.description -%]
