@@ -1,0 +1,9 @@
+<!-- Navbar -->
+<div class="navbar navbar-fixed-top">
+   <div class="navbar-inner">
+      <a class="brand pull-left" href="[% page.homepage_url %]">
+         [% config.title %]</a>
+      <p class="navbar-text pull-right">Generated by
+         <a href="[% links.help_url %]">[% config.appclass %]</a></p>
+   </div>
+</div>
